# algorithm

./: .clang-format  .gitignore  404.html  CMakeLists.txt  Makefile  README.md  build.js  build.py  eslint.config.mjs  index.html  index.txt  knapsack.html  knapsack.txt  package.json  pnpm-lock.yaml  prototype.html  prototype.txt  pyproject.toml  tsconfig.json  union-find.html  union-find.txt
.github/workflows/: deploy.yml
.husky/: pre-commit
_next/static/chunks/: 58-356c78403db32b4b.js  844-7c4e9b9aeb6ccba1.js  844-8005a66555bb156e.js  964-391f1695aa9acf56.js  main-app-2ec8de0baf369786.js  main-b65c58ffb4986aa1.js  webpack-8c14e9def36d70a1.js  webpack-aaffc5c07b9e5691.js
_next/static/css/: 3fcd98231e8970e0.css  aeaaa00730e7c186.css  b03484a3c350cf6e.css
_next/static/dUHOBkFTn4ZknjrymZpfd/: _buildManifest.js
_pagefind/: pagefind-entry.json  pagefind.zh-cn_32ff9e7581114.pf_meta  pagefind.zh-cn_a3ef8e6a19848.pf_meta
_pagefind/fragment/: zh-cn_271d1ef.pf_fragment  zh-cn_517f266.pf_fragment  zh-cn_7ef0cb1.pf_fragment  zh-cn_cb411fc.pf_fragment  zh-cn_e251858.pf_fragment
_pagefind/index/: zh-cn_3c6e416.pf_index
docs/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
docs/app/: global.css  layout.tsx  page.mdx
docs/app/knapsack/: page.mdx
docs/app/prototype/: page.mdx
docs/app/union-find/: index.ts  page.mdx
src/: index.js  main.cc  main.py  main.ts
src/backtrack/: lc131.py  lc17.py  lc216.py  lc39.py  lc40.py  lc46.py  lc47.py  lc491.py  lc51.py  lc77.py  lc78.py  lc90.py  lc93.py  main.ts
src/binary-search/: lc436.ts
src/css/: base.css  bfc.html  bfc2.html  bfc3.html  grid.html  grid2.html  grid3.html  grid4.html  grid5.html  grid6.html  grid7.html  grid8.html  grid9.html
src/dp/: lc343.js  lc62.py  lc63.py  lc96.js
src/dp/knapsack/: README.md  (+7 more)
src/graph/: km106.cc
src/heap/: main.cc  main.py  main.ts
src/lcs/: main.ts
src/monotone-stack/: lc42.cc  lc469.cc  lc503.cc  lc739.cc
src/quick-sort/: main.cc  main.ts
src/segment-tree/: lc3479.cc  lc3479.py
(+40 files in other folders)
